--- a/BTC2/BTC2-Info.plist
+++ b/BTC2/BTC2-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.btcsquared.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>ph.gli.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
